# aarctic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  me.aisuneko.aarctic.desktop  pyproject.toml
src/aarctic/: __init__.py  __main__.py  main.py  server.py  utils.py
src/aarctic/ui/: about.ui  main.ui  settings.ui  wordlistentry.ui
