[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aarctic"
description = "Simplistic desktop client for Aard2"
authors = [
    {name = "aisuneko", email="iceneko@protonmail.ch"}
]
readme = "README.md"
#requires-python = ">=3.7"
keywords = ["aard2", "aard", "Aard2", "dictionary", "slob"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Framework :: CherryPy",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education"
]
dependencies = [
    "pyqt5==5.15.7",
    "bottle",
    "Slob @ git+https://github.com/itkach/slob.git@master",
    "requests",
    "importlib_resources"
]
dynamic = ["version"]

[project.scripts]
aarctic = "aarctic.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aarctic.ui" = ["*.ui"]
"aarctic.sprites" = ["*.ico"]

[tool.setuptools.dynamic]
version = {attr = "aarctic.__version__"}

# [tool.briefcase]
# project_name = "aarctic"
# bundle = "me.aisuneko.aarctic"
# version = "1.0"
# url = "https://github.com/aisuneko/aarctic"
# license = "MIT License"
# author = 'aisuneko'
# author_email = "iceneko@protonmail.ch"

# [tool.briefcase.app.aarctic]
# formal_name = "aarctic"
# description = "Simplistic desktop client for Aard2"
# icon = "src/aarctic/sprites/icon" 
# sources = ['src/aarctic']
# requires = ['cherrypy',
#             'importlib_resources',
#             'requests',
#             'Slob @ git+https://github.com/itkach/slob.git@master',
#             '.']


# [tool.briefcase.app.aarctic.macOS]
# requires = []

# [tool.briefcase.app.aarctic.linux]
# requires = []
# system_requires = []

# [tool.briefcase.app.aarctic.windows]
# requires = []